workshop-k8s/5-statefulset/00-sts-ingress-nginx.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-deployment
  namespace: workshop
  labels:
    app: nginx
spec:
  replicas: 3
  serviceName: nginx-service # Имя сервиса
  updateStrategy:
    type: RollingUpdate # RollingUpdateи, OnDelete
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      restartPolicy: Always
      containers:
      - name: nginx
        image: nginxdemos/hello:0.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 50m
            memory: 60Mi
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: workshop
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
  - name: http-80
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: workshop
  labels:
    app: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: "nginx-test.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
